/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package edu.ubp.doo.modelo;

/**
 *
 * @author agustin
 */
public class BluRaySimple extends Disco{

    @Override
    public String getCapacidad() {
        return "20 GB";
    }

    @Override
    public String getNombre() {
        return "Blu-Ray simple capa";
    }

    @Override
    public float getPrecio() {
        return 50.0f;
    }
    
}
